--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -136,8 +136,10 @@
             <div class="modal-background"></div>
             <div class="modal-card box" style="padding: 3em;">
                 <p class="title is-3 has-text-weight-bold has-text-centered">Something broke!</p>
-                <p class="has-text-centered">We are unable to verify your email as the verification link used is invalid.</p>
-                <p class="has-text-centered">If you require a new verification code, login into your account and follow the instructions.</p>
+                <p class="has-text-centered">We are unable to verify your email as the verification link used is
+                    invalid.</p>
+                <p class="has-text-centered">If you require a new verification code, login into your account and follow
+                    the instructions.</p>
                 <br>
                 <a onclick="$('#accFailedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
                         class="fas fa-times"></i>&ensp;Close</a>
