--- a/templates/chat.html
+++ b/templates/chat.html
@@ -50,15 +50,16 @@
                             <!-- START: Horizontal Card -->
                             <li>
                                 <div class="box mt-4 p-0 has-background-white-ter">
-                                    <a><div>
-                                        <div class="p-2 listing-author">
-                                            <div
-                                                    class="profile-img"
-                                                    style="background-image: url('/pfp.jpg')"
-                                            ></div>
-                                            <div class="ml-2"><b>HideThePain69</b></div>
+                                    <a>
+                                        <div>
+                                            <div class="p-2 listing-author">
+                                                <div
+                                                        class="profile-img"
+                                                        style="background-image: url('/pfp.jpg')"
+                                                ></div>
+                                                <div class="ml-2"><b>HideThePain69</b></div>
+                                            </div>
                                         </div>
-                                    </div>
                                     </a>
                                 </div>
                             </li>
@@ -67,15 +68,16 @@
                             <!-- START: Horizontal Card -->
                             <li>
                                 <div class="box mt-4 p-0">
-                                    <a><div>
-                                        <div class="p-2 listing-author">
-                                            <div
-                                                    class="profile-img"
-                                                    style="background-image: url('/pfp.jpg')"
-                                            ></div>
-                                            <div class="ml-2"><b>HideThePain69</b></div>
+                                    <a>
+                                        <div>
+                                            <div class="p-2 listing-author">
+                                                <div
+                                                        class="profile-img"
+                                                        style="background-image: url('/pfp.jpg')"
+                                                ></div>
+                                                <div class="ml-2"><b>HideThePain69</b></div>
+                                            </div>
                                         </div>
-                                    </div>
                                     </a>
                                 </div>
                             </li>
@@ -90,127 +92,139 @@
 
                 <!--Start: Console Column-->
                 <div class="column">
-                        <div class="container chat-main">
-                            <div class="box p-0">
-                                <!--START: Messages-->
-                                            <div class="card" style="height: 60vh;">
-                                                <div class="card-header p-1 has-background-grey-light">
-                                                    <div class="profile-img"
-                                                         style="background-image: url('/pfp.jpg')"></div>
-                                                    <p class="ml-3 is-size-5 has-text-weight-bold">
-                                                        HideThePain69 </p>
-                                                </div>
+                    <div class="container chat-main">
+                        <div class="box p-0">
+                            <!--START: Messages-->
+                            <div class="card" style="height: 60vh;">
+                                <div class="card-header p-1 has-background-grey-light">
+                                    <div class="profile-img"
+                                         style="background-image: url('/pfp.jpg')"></div>
+                                    <p class="ml-3 is-size-5 has-text-weight-bold">
+                                        HideThePain69 </p>
+                                </div>
 
-                                                <div class="p-3" style="overflow-y: scroll; height: 55vh;">
-                                                     <!--START: message-->
-                                 <div class="box is-pulled-left mt-3 p-3 has-background-grey-lighter" style="max-width:70%; border-radius:20px 20px 20px 0px;">
-                                    <article class="media">
-                                        <figure class="media-left">
-                                          <p class="image is-48x48"><img src="/pfp.jpg"></p>
-                                          <span class="is-size-7">31m</span>
-                                        </figure>
-                                        <div class="media-content">
-                                          <div class="content m-0">
-                                            <p>
-                                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
-                                            </p>
-                                          </div>
-                                        </div>
-                                      </article>
-                                      </div>
-                                      <!--END: message-->
-                                      <!--START: message-->
-                                    <div class="box is-pulled-right mt-3 p-3 has-background-primary is-bold" style="max-width:70%; border-radius:20px 20px 0px 20px;">
+                                <div class="p-3" style="overflow-y: scroll; height: 55vh;">
+                                    <!--START: message-->
+                                    <div class="box is-pulled-left mt-3 p-3 has-background-grey-lighter"
+                                         style="max-width:70%; border-radius:20px 20px 20px 0px;">
+                                        <article class="media">
+                                            <figure class="media-left">
+                                                <p class="image is-48x48"><img src="/pfp.jpg"></p>
+                                                <span class="is-size-7">31m</span>
+                                            </figure>
+                                            <div class="media-content">
+                                                <div class="content m-0">
+                                                    <p>
+                                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                                        ornare magna eros, eu pellentesque tortor vestibulum ut.
+                                                        Maecenas non massa sem. Etiam finibus odio quis feugiat
+                                                        facilisis.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </article>
+                                    </div>
+                                    <!--END: message-->
+                                    <!--START: message-->
+                                    <div class="box is-pulled-right mt-3 p-3 has-background-primary is-bold"
+                                         style="max-width:70%; border-radius:20px 20px 0px 20px;">
                                         <article class="media">
                                             <div class="media-content">
-                                              <div class="content m-0">
-                                                <p>
-                                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
-                                                </p>
-                                              </div>
+                                                <div class="content m-0">
+                                                    <p>
+                                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                                        ornare magna eros, eu pellentesque tortor vestibulum ut.
+                                                        Maecenas non massa sem. Etiam finibus odio quis feugiat
+                                                        facilisis.
+                                                    </p>
+                                                </div>
                                             </div>
                                             <figure class="media-right">
                                                 <p class="image is-48x48"><img src="/pfp.jpg"></p>
                                                 <span class="is-size-7">31m</span>
-                                              </figure>
-                                          </article>
-                                          </div>
-                                          <!--END: message-->
-                                          <!--START: message-->
-                                    <div class="box is-pulled-right mt-3 p-3 has-background-primary is-bold" style="max-width:70%; border-radius:20px 20px 0px 20px;">
+                                            </figure>
+                                        </article>
+                                    </div>
+                                    <!--END: message-->
+                                    <!--START: message-->
+                                    <div class="box is-pulled-right mt-3 p-3 has-background-primary is-bold"
+                                         style="max-width:70%; border-radius:20px 20px 0px 20px;">
                                         <article class="media">
                                             <div class="media-content">
-                                              <div class="content m-0">
-                                                <p>
-                                                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
-                                                </p>
-                                              </div>
+                                                <div class="content m-0">
+                                                    <p>
+                                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                                                        ornare magna eros, eu pellentesque tortor vestibulum ut.
+                                                        Maecenas non massa sem. Etiam finibus odio quis feugiat
+                                                        facilisis.
+                                                    </p>
+                                                </div>
                                             </div>
                                             <figure class="media-right">
                                                 <p class="image is-48x48"><img src="/pfp.jpg"></p>
                                                 <span class="is-size-7">31m</span>
-                                              </figure>
-                                          </article>
-                                          </div>
-                                          <!--END: message-->
-                                                </div>
+                                            </figure>
+                                        </article>
+                                    </div>
+                                    <!--END: message-->
+                                </div>
 
-                                        </div>
-                                <!--END: Messages-->
+                            </div>
+                            <!--END: Messages-->
 
-                                <!--START: Input field-->
-                                <div class="field has-addons">
-                                    <div class="control">
-                                        <!--Dropup-->
-                                        <div class="dropdown post-options is-hoverable is-up">
-                                            <div class="dropdown-trigger">
-                                                <button
-                                                        class="button"
-                                                        aria-haspopup="true"
-                                                        aria-controls="dropdown-menu-post"
-                                                >
+                            <!--START: Input field-->
+                            <div class="field has-addons">
+                                <div class="control">
+                                    <!--Dropup-->
+                                    <div class="dropdown post-options is-hoverable is-up">
+                                        <div class="dropdown-trigger">
+                                            <button
+                                                    class="button"
+                                                    aria-haspopup="true"
+                                                    aria-controls="dropdown-menu-post"
+                                            >
                                                 <span class="icon is-small">
                                                 <i class="fas fa-paperclip"></i>
                                                 </span>
-                                                </button>
-                                            </div>
-                                            <div
-                                                    class="dropdown-menu"
-                                                    id="dropdown-menu-post"
-                                                    role="menu"
-                                            >
-                                                <div class="dropdown-content">
-                                                    <a class="dropdown-item">
-                                                        Quote a Tour
-                                                    </a>
-                                                    <a class="dropdown-item">
-                                                        <i class="fas fa-photo-video"></i>&ensp;Photos &
-                                                        Videos
-                                                    </a>
-                                                </div>
+                                            </button>
+                                        </div>
+                                        <div
+                                                class="dropdown-menu"
+                                                id="dropdown-menu-post"
+                                                role="menu"
+                                        >
+                                            <div class="dropdown-content">
+                                                <a class="dropdown-item">
+                                                    Quote a Tour
+                                                </a>
+                                                <a class="dropdown-item">
+                                                    <i class="fas fa-photo-video"></i>&ensp;Photos &
+                                                    Videos
+                                                </a>
                                             </div>
                                         </div>
-                                        <!--END: Dropup-->
                                     </div>
-                                    <div class="control is-expanded">
-                                        <input
-                                                class="input is-fullwidth"
-                                                type="text"
-                                                placeholder="Enter your message.."
-                                        />
-                                    </div>
-                                    <div class="control">
-                                        <button class="button is-primary">
-                                            <i class="fas fa-paper-plane"></i>
-                                        </button>
-                                    </div>
+                                    <!--END: Dropup-->
                                 </div>
-                                <!--END: Input Field-->
+                                <div class="control is-expanded">
+                                    <input
+                                            class="input is-fullwidth"
+                                            type="text"
+                                            placeholder="Enter your message.."
+                                    />
+                                </div>
+                                <div class="control">
+                                    <button class="button is-primary">
+                                        <i class="fas fa-paper-plane"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <!--END: Input Field-->
                         </div>
+                    </div>
+                    <!--End: Console Column-->
                 </div>
-                <!--End: Console Column-->
             </div>
-        </div>
     </section>
 
 
