--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -9,59 +9,60 @@
 
 
 {% block content %}
-<section class="section mt-6">
-    <div class="columns is-centered">
-        <div class="column is-two-fifths">
-            <div class="container box">
-                <!--START: Customise tour button-->
-                <div class="field">
-                    <div class="control">
-                            <a href="{{ url_for('checkout')}}">
+    <section class="section mt-6">
+        <div class="columns is-centered">
+            <div class="column is-two-fifths">
+                <div class="container box">
+                    <!--START: Customise tour button-->
+                    <div class="field">
+                        <div class="control">
+                            <a href="{{ url_for('checkout') }}">
                                 <button class="button is-medium is-fullwidth is-success">
                                     <p class="has-text-weight-semibold">Customise Tour</p>
                                 </button>
                             </a>
+                        </div>
                     </div>
+                    <!--END: Customise tour button-->
+                    <div class="divider">OR</div>
+                    <!--START: Book now form-->
+                    <div class="field">
+                        <label class="label">Select Date</label>
+                        <div class="control">
+                            <input class="input" type="date" placeholder="">
+                        </div>
+                    </div>
+
+                    <div class="field">
+                        <label class="label">Select Time</label>
+                        <div class="control">
+                            <input class="input" type="time" placeholder="">
+                        </div>
+                    </div>
+
+                    <div class="field">
+                        <div class="control">
+                            <label class="checkbox">
+                                <input type="checkbox">
+                                I agree to the <a href="#">terms and conditions.</a>
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="field">
+                        <div class="control">
+                            <a href="{{ url_for('checkout') }}">
+                                <button class="button is-medium is-fullwidth is-link">
+                                    <p class="has-text-weight-semibold">Book Now</p>
+                                </button>
+                            </a>
+                        </div>
+                        <p class="is-grey has-text-centered">Not sure if this tour is for you? <a
+                                href="{{ url_for('chat') }}"> Chat with HidethePain first.</a></p>
+                    </div>
+                    <!--END: Book now form-->
                 </div>
-                <!--END: Customise tour button-->
-                <div class="divider">OR</div>
-                <!--START: Book now form-->
-                <div class="field">
-                    <label class="label">Select Date</label>
-                    <div class="control">
-                      <input class="input" type="date" placeholder="">
-                    </div>
-                  </div>
-                  
-                  <div class="field">
-                    <label class="label">Select Time</label>
-                    <div class="control">
-                      <input class="input" type="time" placeholder="">
-                    </div>
-                  </div>
-
-                  <div class="field">
-                    <div class="control">
-                      <label class="checkbox">
-                        <input type="checkbox">
-                        I agree to the <a href="#">terms and conditions.</a>
-                      </label>
-                    </div>
-                  </div>
-
-                  <div class="field">
-                    <div class="control">
-                        <a href="{{ url_for('checkout')}}">
-                            <button class="button is-medium is-fullwidth is-link">
-                                <p class="has-text-weight-semibold">Book Now</p>
-                            </button>
-                        </a>
-                    </div>
-                    <p class="is-grey has-text-centered">Not sure if this tour is for you? <a href="{{ url_for('chat')}}"> Chat with HidethePain first.</a></p>
-                  </div>
-                <!--END: Book now form-->
             </div>
         </div>
-    </div>
-</section>
+    </section>
 {% endblock %}
