--- a/templates/tourGuides/ownlisting.html
+++ b/templates/tourGuides/ownlisting.html
@@ -37,7 +37,7 @@
                                             <div class="ml-2"><b>HidethePain</b> is offering:</div>
                                         </div>
                                         <h1 class='title'>{{ item.tour_name }}</h1>
-                                        <p class="subtitle">{{ item.tour_brief }}</p>
+                                        <p class="subtitle">{{ item.tour_desc }}</p>
                                         <p class="has-text-weight-light is-size-2 has-text-dark"><small
                                                 class="is-size-5">From</small>
                                             ${{ item.tour_price }}
