--- a/templates/customer/index-customer.html
+++ b/templates/customer/index-customer.html
@@ -31,7 +31,7 @@
                             <div class="ml-4">
                                 <div class="mb-2 listing-author">
                                     <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                    <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                                    <div class="ml-2"><b>{{ user['name'] }}</b> is offering:</div>
                                 </div>
                                 <h1 class='title'> {{ listings[-1].tour_name }}</h1>
                                 <p class="subtitle">{{ listings[-1].tour_brief }}</p>
