--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -9,7 +9,6 @@
 
 
 {% block content %}
-{% from "_formhelper.html" import render_field %}
     <section class="section mt-6">
         <div class="columns is-centered">
             <div class="column is-two-fifths">
@@ -27,27 +26,29 @@
                     <!--END: Customise tour button-->
                     <div class="divider">OR</div>
                     <!--START: Book now form-->
-                    <form enctype="multipart/form-data" action="{{ url_for('book_now') }}" method="POST">
+                    <form id="book_form" method="POST" action="{{ url_for('book_now') }}">
                         {{ form.csrf_token }}
-
                     <div class="field">
                         <label class="label">Select Date</label>
                         <div class="control">
-                            <input class="input" type="date" placeholder="">
+                            {{ form.book_date(id="book_date", type="date", class="input") }}
+                            <!--<input class="input" type="date" placeholder="">-->
                         </div>
                     </div>
 
                     <div class="field">
                         <label class="label">Select Time</label>
                         <div class="control">
-                            <input class="input" type="time" placeholder="">
+                            {{ form.book_time(id="book_time", type="time", class="input") }}
+                            <!--<input class="input" type="time" placeholder="">-->
                         </div>
                     </div>
 
                     <div class="field">
                         <div class="control">
                             <label class="checkbox">
-                                <input type="checkbox">
+                                {{form.accept_tnc(id="accept_tnc")}}
+                                <!--<input type="checkbox">-->
                                 I agree to the <a href="#">terms and conditions.</a>
                             </label>
                         </div>
@@ -55,11 +56,9 @@
 
                     <div class="field">
                         <div class="control">
-                            <a href="{{ url_for('checkout') }}">
-                                <button class="button is-medium is-fullwidth is-link">
+                                <button type="submit" class="button is-medium is-fullwidth is-link">
                                     <p class="has-text-weight-semibold">Book Now</p>
                                 </button>
-                            </a>
                         </div>
                         <p class="is-grey has-text-centered">Not sure if this tour is for you? <a
                                 href="{{ url_for('chat') }}"> Chat with HidethePain first.</a></p>
