--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -31,6 +31,12 @@
     white-space: nowrap;
 }
 
+.listing-card-text-big {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .vertical .listing-img {
     width: 100%;
     height: 10rem;
